# radar-weather_system

./: .env.example  .gitignore  LICENSE  README.md  cheatsheet.md  class_diagram_radar_subsistema1.html  docker-compose.override.yml  docker-compose.yml  erd_radar_weather.html  guia_desarrollo.md  main.py  pyproject.toml  radar images geotiffs.txt  radar weather system.txt  san_rafael_050125_051200.tif
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_create_radar_images_table.py  a709c721929e_.py  f37b65691850_initial_schema.py
app/: main.py
app/core/: config.py  constanst.py  scheduler.py
app/data/: database.py
app/data/geotiffs/: san_rafael_050125_000000.tif  san_rafael_050125_000400.tif  san_rafael_050125_000800.tif  san_rafael_050125_001200.tif  san_rafael_050125_001600.tif  san_rafael_050125_002400.tif  san_rafael_050125_002800.tif  san_rafael_050125_003200.tif  san_rafael_050125_004000.tif  san_rafael_050125_004400.tif  san_rafael_050125_004800.tif  san_rafael_050125_005200.tif  san_rafael_050125_005600.tif  san_rafael_050125_010400.tif  san_rafael_050125_010800.tif  san_rafael_050125_011200.tif  san_rafael_050125_012000.tif  san_rafael_050125_012400.tif  san_rafael_050125_012800.tif  san_rafael_050125_013200.tif  san_rafael_050125_014000.tif  san_rafael_050125_014400.tif  san_rafael_050125_014800.tif  san_rafael_050125_015200.tif  (+334 more)
docker/: Dockerfile  entrypoint.sh
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
tests/integration/: test_dacc_scheduler_integration.py  test_local_gif_pipeline.py
(+26 files in other folders)
